--- a/code/tests/log.html
+++ b/code/tests/log.html
@@ -1727,25 +1727,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,63675],[],[[4,0,1,0,[],[1,21632,21014],[[0,5,6,0,0,7,0,0,[1,21634,21005],[],[]],[0,8,6,0,0,9,10,0,[1,42640,2],[],[[42642,2,11]]],[0,12,13,0,14,15,0,0,[1,42644,1],[],[]]]],[16,0,1,0,[],[1,42651,21018],[[0,17,6,0,0,18,0,0,[1,42653,21015],[],[]]]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[1,0,85835],[],[[4,0,1,0,[],[1,21777,22011],[[0,5,6,0,0,7,0,0,[1,21778,21998],[],[]],[0,8,6,0,0,9,10,0,[1,43777,6],[],[[43782,2,11],[43783,2,12]]],[0,13,14,0,15,16,0,0,[1,43785,1],[],[]]]],[17,0,1,0,[],[1,43792,21007],[[0,18,6,0,0,19,0,0,[1,43794,21003],[],[]]]],[20,0,1,0,[],[1,64805,21023],[[0,21,14,0,22,23,0,0,[1,64807,21019],[[0,8,6,0,0,24,0,0,[0,64808,21016],[],[[85821,2,25],[85824,5,26]]]],[]]]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\test_pre_study\\test_pre_study\\code\\tests\\test.robot","*test.robot","*My Test case","*Write Storage Point Value","*StorageLibrary","*0, ${VAR}","*Read Storage Point Value","*0","*${V1}","*${V1} = 25","*Should Be Equal","*BuiltIn","*<p>Fails if the given objects are unequal.\x3c/p>","*${V1}, ${VAR}","*Test write and read","*Verify Write And Read","*1, uusi arvo"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\test_pre_study\\test_pre_study\\code\\tests\\test.robot","*test.robot","*My Test case","*Write Storage Point Value","*StorageLibrary","*0, ${VAR}","*Read Storage Point Value","*0","*${V1}","*Type: &lt;class 'list'&gt;\nID:0 Name: Storage Point 1 Value: 25","*${V1} = 25","*Should Be Equal","*BuiltIn","*<p>Fails if the given objects are unequal.\x3c/p>","*${V1}, ${VAR}","*Test write and read","*Verify Write And Read","*1, uusi arvo","*Test read not exisiting storage value","*Run Keyword And Expect Error","*<p>Runs the keyword and checks that the expected error occurred.\x3c/p>","*Storage point does not exist, read storage point value, 100","*100","eNoLqSxItVJQyymxTs5JLC5WUM/JLC5RV0svsebydLEyUPBLzAXKB5fkFyWmpyoE5GfmlSgYKoQl5pQChY1MQYoMsSoygikqLS3OVEgsKssHqTXCqtYYptYvPy8VAERjLp4=","*Storage point does not exist"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:42","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:42","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:01:04","fail":0,"id":"s1","label":"Test","name":"Test","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:01:04","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:01:04","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:26","fail":0,"id":"s1","label":"Test","name":"Test","pass":3}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1495532625189;
+window.output["baseMillis"] = 1495539297833;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 63713;
+window.output["generated"] = 85871;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
