--- a/code/tests/report.html
+++ b/code/tests/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,63675],[],[[4,0,1,0,[],[1,21632,21014],[]],[5,0,1,0,[],[1,42651,21018],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[1,0,85835],[],[[4,0,1,0,[],[1,21777,22011],[]],[5,0,1,0,[],[1,43792,21007],[]],[6,0,1,0,[],[1,64805,21023],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\test_pre_study\\test_pre_study\\code\\tests\\test.robot","*test.robot","*My Test case","*Test write and read"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\test_pre_study\\test_pre_study\\code\\tests\\test.robot","*test.robot","*My Test case","*Test write and read","*Test read not exisiting storage value"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:42","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:42","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:01:04","fail":0,"id":"s1","label":"Test","name":"Test","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:01:04","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:01:04","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:26","fail":0,"id":"s1","label":"Test","name":"Test","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1495532625189;
+window.output["baseMillis"] = 1495539297833;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 63713;
+window.output["generated"] = 85871;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
